# opengl-project

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindASSIMP.cmake
configuration/: root_dir.h  root_directory.h  root_directory.h.in
docs/: Tasks.md
includes/: Camera.h  CustomMath.h  Entity.h  ExampleGUI.h  FileReader.h  FileSystem.h  GUI.h  Light.h  Material.h  Math.h  Mesh.h  Model.h  ObjectUI.h  Primitive.h  Renderer.h  Scene.h  Shader.h  Texture.h  Utils.h  config.h
includes/glad/: glad.h
includes/gui/: ExampleGUI.h  GUI.h  GUIWidgets.h  ObjectUI.h
includes/imgui/: imgui_impl_opengl3.cpp
includes/object/: Actor.h  Mesh.h  Model.h  Primitive.h  Scene.h  Transform.h
includes/rendering/: Camera.h  Light.h  Material.h  Renderer.h  Shader.h  Texture.h
includes/utility/: CustomMath.h  FileReader.h  FileSystem.h  Utils.h
opengl-project/lib/: glfw3.lib
opengl-project/shaders/: shader.fs  shader.vs
resources/models/sphere/: sphere.mtl
resources/primitives/2D/: quad.2d  rectangle.2d  triangle.2d
resources/primitives/3D/: cube.3d  cubemap.3d  plane.3d  quad.3d
shaders/: shader_2d.vs  shader_3d.fs  shader_3d_col.fs  shader_directional.fs  shader_gouraud.vs  shader_light.fs  shader_light.vs  shader_material.fs  shader_point.fs  shader_scene.fs  shader_source.fs  shader_spotlight.fs  shader_texture.fs  shader_view.vs
shaders/final/: shader_2d_color.fs  shader_2d_color.vs  shader_2d_tex.fs  shader_3d_color.vs  shader_3d_model.fs  shader_3d_tex.fs  shader_light.vs
shaders/light/: shader_directional.fs  shader_model.fs  shader_scene.fs
shaders/modern/: shader_2d.fs  shader_2d.vs  shader_3d.vs  shader_3d_col.fs  shader_3d_mat.fs  shader_3d_scene.fs  shader_3d_tex.fs  shader_directional.fs  shader_frame.fs  shader_model.fs  shader_model.vs  shader_point.fs  shader_reflect.fs  shader_scene.fs  shader_scene.vs  shader_skybox.fs  shader_skybox.vs  shader_source.fs  shader_source.vs  shader_spotlight.fs  shader_transparent.fs
shaders/object/: shader_material.fs  shader_texture.vs
shaders/other/: shader.fs  shader.vs  shader_gouraud.fs  shader_outline.fs  shader_view.fs
shaders/primitive/: shader_2d.fs  shader_3d.vs  shader_3d_col.fs  shader_3d_mat.fs  shader_3d_scene.fs  shader_3d_tex.fs  shader_source.fs
src/: Application.cpp  Camera.cpp  CustomMath.cpp  Entity.cpp  ExampleGUI.cpp  FileReader.cpp  FileSystem.cpp  GUI.cpp  Light.cpp  Material.cpp  Math.cpp  Mesh.cpp  Model.cpp  ObjectUI.cpp  Primitive.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Utils.cpp  glad.c
src/gui/: ExampleGUI.cpp  GUI.cpp  GUIWidgets.cpp  ObjectUI.cpp
src/object/: Actor.cpp  Mesh.cpp  Model.cpp  Primitive.cpp  Scene.cpp  Transform.cpp
src/rendering/: Camera.cpp  Light.cpp  Material.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/utility/: CustomMath.cpp  FileReader.cpp  FileSystem.cpp  Utils.cpp
